--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -11,8 +12,12 @@
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^4.1.17",
     "react": "^18.1.0",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^18.1.0",
+    "react-google-autocomplete": "^2.6.1",
     "react-icons": "^3.11.0",
+    "react-places-autocomplete": "^7.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^0.2.4"
   },
@@ -36,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://steaks4stakes.com/"
 }
